src/ty/snapshots/tvm__ty__tests__bad_extern_fn_call.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        extern fn add1(v: int) -> int;\n\n        add1(true)\n    \"#)"
---
error: type mismatch between "bool" and "int"
3 |  add1(true)
  |       ^^^^


